versioned_docs/version-2023.1.3/intro.md
---
sidebar_position: 1
---

# Home

<p>
  Seja bem-vindo ao novo sistema web para o quadro de horários do Instituto Federal do Paraná - Campus Assis Chateaubriand. 
</p>

## Novidades

12/fev/2023: Ferramenta de busca
01/fev/2023: Versão "Em desenvolvimento" para planejamento de trocas e proxímas atualizações

## Novas funcionalidades


- Menu lateral para melhorar sua navegação.
- Fácil acesso ao horário de qualquer professor, turma, ou sala de aula.
- Tema claro e escuro.
- Configure o seu próprio horário escolhendo a forma como quer seja exibido.
  - Completo (Padrão): Será exibido o horário das aulas de todos os dias das 07:30 até as 22:40.
  - Condensado: Será exibido o horário entre a primeira e última aula, sem tirar os espaços vago.
  - Super condensado: Será exibido o horário entre a primeira e última aula, tirando os dias que não possui aula e os espaços vago.
- A cada alteração no horário será criado uma nova versão e armazenada. Sendo assim, você consegue visualizar até os horários antigo.
- Foto do horário por completo (Disponível apenas para dispositivos Android e Desktop).
